Fixed title showing double in tab when on home page. Now checks for match with text 'Home'.

--- a/themes/hugo-basic/layouts/partials/post-header.html
+++ b/themes/hugo-basic/layouts/partials/post-header.html
@@ -21,8 +21,7 @@
             {{ $len := len $taglist }}
             <i class="fa fa-tags"></i>
             {{ range $index, $element := $taglist }}
-              <a href="/tags/{{ . | urlize }}" style="color: #FFF">{{ . }}</a>
-              {{ if not (eq (add $index 1) $len) }},&nbsp;{{ end }}
+              <a href="/tags/{{ . | urlize }}" style="color: #FFF">{{ . }}</a>{{ if not (eq (add $index 1) $len) }},&nbsp;{{ end }}
             {{ end }}
           </span>
         </div>
