--- a/themes/hugo-basic/layouts/partials/site-navigation.html
+++ b/themes/hugo-basic/layouts/partials/site-navigation.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-md navbar-light fixed-top bg-light">
   <div class="container">
     <!-- Logo -->
-    <a class="navbar-brand" href="/"><i class="fas fa-laptop"></i> {{ .Site.Title }}</a>
+    <a class="navbar-brand" href="/"><i class="fas fa-laptop"></i>&nbsp;&nbsp;{{ .Site.Title }}</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
