--- a/themes/hugo-basic/layouts/_default/list.html
+++ b/themes/hugo-basic/layouts/_default/list.html
@@ -2,7 +2,7 @@
   {{ .Content }}
   <ul>
   {{ range .Pages }}
-    <li><a href="{{ .URL }}">{{ .Title }}</a></li>
+    <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
   {{ end }}
   </ul>
 {{ end }}
