--- a/themes/hugo-basic/layouts/partials/site-head.html
+++ b/themes/hugo-basic/layouts/partials/site-head.html
@@ -7,9 +7,7 @@
 <title>{{ .Title }} | {{ .Site.Title }}</title>
 
 <!-- RSS -->
-{{ with .OutputFormats.Get "atom" -}}
-    {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
-{{ end -}}
+<link href='{{ "/feed.xml" | relURL }}' rel="alternate" type="application/atom+xml" title="{{ .Site.Title }}" />
 
 <!-- Bootstrap core CSS -->
 <link href="/css/bootstrap.min.css" rel="stylesheet" />
