--- a/themes/hugo-basic/layouts/index.atom.xml
+++ b/themes/hugo-basic/layouts/index.atom.xml
@@ -4,7 +4,7 @@
   {{ else }}
     <title>{{ .Title }} - {{ .Site.Title }}</title>
   {{ end }}
-  <link href="{{ .Permalink }}index.xml" rel="self"/>
+  <link href="{{ .Permalink }}feed.xml" rel="self"/>
   <link href="{{ .Permalink }}"/>{{ if not .Date.IsZero }}
   <updated>{{ .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}</updated>{{ end }}
   <id>{{ .Permalink }}</id>{{ with .Site.Author.name }}
