Increased icon sizes.

--- a/themes/hugo-basic/layouts/partials/site-footer.html
+++ b/themes/hugo-basic/layouts/partials/site-footer.html
@@ -6,27 +6,32 @@
       <ul class="list-inline" style="font-size: 2em">
         <li class="list-inline-item">
           <a href="https://twitter.com/{{ .Site.Params.twitter }}">
-            <i class="fab fa-twitter social-media-icon" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i>
+            <i class="fab fa-twitter social-media-icon fa-lg" data-fa-transform="shrink-6" data-fa-mask="fas fa-square"></i>
           </a>
         </li>
         <li class="list-inline-item">
           <a href="https://instagram.com/{{ .Site.Params.instagram }}">
-            <i class="fab fa-instagram social-media-icon" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i>
+            <i class="fab fa-instagram social-media-icon fa-lg" data-fa-transform="shrink-6" data-fa-mask="fas fa-square"></i>
           </a>
         </li>
         <li class="list-inline-item">
           <a href="https://facebook.com/{{ .Site.Params.facebook }}">
-            <i class="fab fa-facebook-f social-media-icon" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i>
+            <i class="fab fa-facebook-f social-media-icon fa-lg" data-fa-transform="shrink-6" data-fa-mask="fas fa-square"></i>
           </a>
         </li>
         <li class="list-inline-item">
           <a href="https://flickr.com/photos/{{ .Site.Params.flickr }}">
-            <i class="fab fa-flickr social-media-icon" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i>
+            <i class="fab fa-flickr social-media-icon fa-lg" data-fa-transform="shrink-6" data-fa-mask="fas fa-square"></i>
           </a>
         </li>
         <li class="list-inline-item">
           <a href="https://github.com/{{ .Site.Params.github }}">
-            <i class="fab fa-github social-media-icon" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i>
+            <i class="fab fa-github social-media-icon fa-lg" data-fa-transform="shrink-6" data-fa-mask="fas fa-square"></i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a href="/feed.xml">
+            <i class="fas fa-rss social-media-icon fa-lg" data-fa-transform="shrink-6" data-fa-mask="fas fa-square"></i>
           </a>
         </li>
       </ul>
