Updated layout for homepage. Grabs first 10 posts, first one gets larger layout, last nine set to 3x3 grid.

--- a/themes/hugo-basic/layouts/index.html
+++ b/themes/hugo-basic/layouts/index.html
@@ -1,35 +1,65 @@
 {{ define "main" }}
   {{ .Content }}
-  {{ $pages := first 9 (where site.RegularPages "Type" "in" site.Params.mainSections) }}
+  {{ $pages := first 10 (where site.RegularPages "Type" "in" site.Params.mainSections) }}
   <div class="row">
-    {{ range $pages }}
+    {{ range $index, $value := $pages }}
       {{ $link := .Permalink }}
       {{ $title := .Title}}
       {{ $image := .Params.image }}
       {{ $thumbnail := .Params.thumbnail }}
-      <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-sm-12 col-xs-12 pt-3">
-        <div class="card">
-          <div class="card-header">
-            <h4><a href="{{ $link }}">{{ .Title }}</a></h4>
-          </div>
-          {{ with .Params.image }}
-          <a href="{{ $link }}"><img class="card-img-top img-fluid" src="{{ $image }}"  alt="{{ $title }}" /></a>
-          {{ else }}
-          <a href="{{ $link }}"><img class="card-img-top post-img-thumb img-fluid" src="{{ $thumbnail }}"  alt="{{ $title }}" /></a>
-          {{ end }}
-          <div class="card-body">
-            {{ .Date.Format "January 2, 2006" }}
-          </div>
-          <div class="card-footer text-muted">
-            {{ $taglist := .Params.tags }}
-            {{ $len := len $taglist}}
-            <i class="fa fa-tags"></i>
-              {{ range $index, $element := $taglist }}
-                <a href="/tags/{{ . | urlize }}">{{ . }}</a>{{ if not (eq (add $index 1) $len) }},&nbsp;{{ end }}
-              {{ end }}
+
+      {{ if eq $index 0 }}
+        <!-- First/Top -->
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 pt-3">
+          <div class="card">
+            <div class="card-header">
+              <h4><a href="{{ $link }}">{{ .Title }}</a></h4>
+            </div>
+            {{ with .Params.image }}
+            <a href="{{ $link }}"><img class="card-img-top img-fluid" src="{{ $image }}"  alt="{{ $title }}" /></a>
+            {{ else }}
+            <a href="{{ $link }}"><img class="card-img-top post-img-thumb img-fluid" src="{{ $thumbnail }}"  alt="{{ $title }}" /></a>
+            {{ end }}
+            <div class="card-body">
+              <h5>{{ .Date.Format "January 2, 2006" }}</h5>
+              <p>{{ .Params.description }}</p>
+            </div>
+            <div class="card-footer text-muted">
+              {{ $taglist := .Params.tags }}
+              {{ $len := len $taglist}}
+              <i class="fa fa-tags"></i>
+                {{ range $index, $element := $taglist }}
+                  <a href="/tags/{{ . | urlize }}">{{ . }}</a>{{ if not (eq (add $index 1) $len) }},&nbsp;{{ end }}
+                {{ end }}
+            </div>
           </div>
         </div>
-      </div>
+      {{ else }}
+        <!-- All else -->
+        <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-sm-12 col-xs-12 pt-3">
+          <div class="card">
+            <div class="card-header">
+              <h4><a href="{{ $link }}">{{ .Title }}</a></h4>
+            </div>
+            {{ with .Params.image }}
+            <a href="{{ $link }}"><img class="card-img-top img-fluid" src="{{ $image }}"  alt="{{ $title }}" /></a>
+            {{ else }}
+            <a href="{{ $link }}"><img class="card-img-top post-img-thumb img-fluid" src="{{ $thumbnail }}"  alt="{{ $title }}" /></a>
+            {{ end }}
+            <div class="card-body">
+              <h5>{{ .Date.Format "January 2, 2006" }}</h5>
+            </div>
+            <div class="card-footer text-muted">
+              {{ $taglist := .Params.tags }}
+              {{ $len := len $taglist}}
+              <i class="fa fa-tags"></i>
+                {{ range $index, $element := $taglist }}
+                  <a href="/tags/{{ . | urlize }}">{{ . }}</a>{{ if not (eq (add $index 1) $len) }},&nbsp;{{ end }}
+                {{ end }}
+            </div>
+          </div>
+        </div>
+      {{ end }}
     {{ end }}
   </div>
 {{ end }}
