Updated homepage layout. Added headers for latest post and recent posts sections.

--- a/themes/hugo-basic/layouts/index.html
+++ b/themes/hugo-basic/layouts/index.html
@@ -10,6 +10,9 @@
 
       {{ if eq $index 0 }}
         <!-- First/Top -->
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+          <h1>Latest Post</h1>
+        </div>
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12 pt-3">
           <div class="card">
             <div class="card-header">
@@ -35,6 +38,11 @@
           </div>
         </div>
       {{ else }}
+        {{ if eq $index 1 }}
+          <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h1>Recent Posts</h1>
+          </div>
+        {{ end }}
         <!-- All else -->
         <div class="col-xl-4 col-lg-6 col-md-12 col-sm-12 col-sm-12 col-xs-12 pt-3">
           <div class="card">
