Changed atom feed to use atom.xml instead of feed.xml to maintain legacy support-- was atom.xml for long time before.

--- a/themes/hugo-basic/layouts/partials/site-footer.html
+++ b/themes/hugo-basic/layouts/partials/site-footer.html
@@ -30,7 +30,7 @@
           </a>
         </li>
         <li class="list-inline-item">
-          <a href="/feed.xml">
+          <a href="/atom.xml">
             <i class="fas fa-rss social-media-icon fa-lg" data-fa-transform="shrink-6" data-fa-mask="fas fa-square"></i>
           </a>
         </li>
