--- a/themes/hugo-basic/layouts/partials/site-head.html
+++ b/themes/hugo-basic/layouts/partials/site-head.html
@@ -7,7 +7,7 @@
 <title>{{ .Title }} | {{ .Site.Title }}</title>
 
 <!-- RSS -->
-<link href='{{ "/feed.xml" | relURL }}' rel="alternate" type="application/atom+xml" title="{{ .Site.Title }}" />
+<link href='{{ "/atom.xml" | relURL }}' rel="alternate" type="application/atom+xml" title="{{ .Site.Title }}" />
 
 <!-- Bootstrap core CSS -->
 <link href="/css/bootstrap.min.css" rel="stylesheet" />
