Fixed bug where author not showing up in atom feed.

--- a/themes/hugo-basic/layouts/index.atom.xml
+++ b/themes/hugo-basic/layouts/index.atom.xml
@@ -12,7 +12,7 @@
   <entry>
     {{ `<title type="html"><![CDATA[` | safeHTML }}{{ .Title }}]]></title>
     <link href="{{ .Permalink }}"/>
-    <id>{{ .Permalink }}</id>{{ with .Site.Params.Author }}
+    <id>{{ .Permalink }}</id>{{ with .Params.author }}
     <author>
       <name>{{.}}</name>
     </author>{{end}}
