--- a/themes/hugo-basic/layouts/index.atom.xml
+++ b/themes/hugo-basic/layouts/index.atom.xml
@@ -1,6 +1,6 @@
 <feed xmlns="http://www.w3.org/2005/Atom">
   {{ $permalink := .Permalink }}
-  <title>{{ .Title }} - {{ .Site.Title }}</title>
+  <title>{{ .Site.Title }}</title>
   <link href="{{ .Permalink }}atom.xml" rel="self"/>
   <link href="{{ .Permalink }}"/>{{ if not .Date.IsZero }}
   <updated>{{ .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}</updated>{{ end }}
