Moved date out of link. Just text.

--- a/themes/hugo-basic/layouts/posts/list.html
+++ b/themes/hugo-basic/layouts/posts/list.html
@@ -5,7 +5,7 @@
     <h2>{{ .Key }}</h2>
     <ul>
       {{ range .Pages }}  
-      <li><a href="{{ .Permalink }}">{{ .Title }} - {{ .Date.Format "January 2, 2006" }}</a></li>
+      <li><a href="{{ .Permalink }}">{{ .Title }}</a> - {{ .Date.Format "January 2, 2006" }}</li>
       {{ end }}
     </ul>
   {{ end }}
