Pages/lists for tags now groups by year along with display date.

--- a/themes/hugo-basic/layouts/_default/list.html
+++ b/themes/hugo-basic/layouts/_default/list.html
@@ -1,8 +1,11 @@
 {{ define "main" }}
   {{ .Content }}
-  <ul>
-  {{ range .Pages }}
-    <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
-  {{ end }}
+  {{ range .Pages.GroupByDate "2006" }}
+    <h2>{{ .Key }}</h2>
+    <ul>
+    {{ range .Pages }}
+      <li><a href="{{ .Permalink }}">{{ .Title }}</a> - {{ .Date.Format "January 2, 2006" }}</li>
+    {{ end }}
   </ul>
+  {{ end }}
 {{ end }}
