--- a/themes/hugo-basic/layouts/index.atom.xml
+++ b/themes/hugo-basic/layouts/index.atom.xml
@@ -4,11 +4,7 @@
   <link href="{{ .Permalink }}atom.xml" rel="self"/>
   <link href="{{ .Permalink }}"/>{{ if not .Date.IsZero }}
   <updated>{{ .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}</updated>{{ end }}
-  <id>{{ .Permalink }}</id>{{ with .Site.Author.name }}
-  <author>
-    <name>{{.}}</name>{{ with $.Site.Author.email }}
-    <email>{{.}}</email>{{end}}
-  </author>{{end}}{{ with .Site.Params.favicon }}
+  <id>{{ .Permalink }}</id>{{ with .Site.Params.favicon }}
   <icon>{{ $permalink }}{{ . }}</icon>{{ end }}
   <generator>Hugo -- gohugo.io</generator>{{ range first 15 (where .Data.Pages "Type" "in" .Site.Params.mainSections) }}
   <entry>
