--- a/themes/hugo-basic/layouts/index.atom.xml
+++ b/themes/hugo-basic/layouts/index.atom.xml
@@ -1,21 +1,21 @@
-<feed xmlns="http://www.w3.org/2005/Atom">
+<feed xmlns="http://www.w3.org/2005/Atom" xml:lang="en">
   {{ $permalink := .Permalink }}
   <title>{{ .Site.Title }}</title>
   <link href="{{ .Permalink }}atom.xml" rel="self"/>
-  <link href="{{ .Permalink }}"/>{{ if not .Date.IsZero }}
+  <link type="text/html" href="{{ .Permalink }}" rel="alternate" />{{ if not .Date.IsZero }}
   <updated>{{ .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}</updated>{{ end }}
   <id>{{ .Permalink }}</id>{{ with .Site.Params.favicon }}
   <icon>{{ $permalink }}{{ . }}</icon>{{ end }}
   <generator>Hugo -- gohugo.io</generator>{{ range first 15 (where .Data.Pages "Type" "in" .Site.Params.mainSections) }}
   <entry>
     {{ `<title type="html"><![CDATA[` | safeHTML }}{{ .Title }}]]></title>
-    <link href="{{ .Permalink }}"/>
-    <id>{{ .Permalink }}</id>{{ with .Params.author }}
+    <link rel="alternate" type="text/html" href="{{ .Permalink }}"/>
+    <id>{{ .Permalink }}</id>
+    <published>{{ .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}</published>
+    <updated>{{ .Lastmod.Format "2006-01-02T15:04:05-07:00" | safeHTML }}</updated>
+    {{ `<content type="html"><![CDATA[` | safeHTML }}{{ .Content }}]]></content>{{ with .Params.author }}
     <author>
       <name>{{.}}</name>
     </author>{{end}}
-    <published>{{ .Date.Format "2006-01-02T15:04:05-07:00" | safeHTML }}</published>
-    <updated>{{ .Lastmod.Format "2006-01-02T15:04:05-07:00" | safeHTML }}</updated>
-    {{ `<content type="html"><![CDATA[` | safeHTML }}{{ .Content }}]]></content>
   </entry>{{ end }}
 </feed>
